# solidworks-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
install/: register-mcp.md
scripts/: probe_asm_errors.py  probe_surface.py  spike_autofix.py  spike_branch.py  spike_build.py  spike_connect.py  spike_dump.py  spike_earlybind.py  spike_planemap.py  spike_rib.py  spike_runmacro.py  spike_runmacro2.py  spike_selplane.py  try_feature.py
src/sw_mcp/: __init__.py  com_worker.py  cosmon_db.py  cosmon_resources.py  design_library.py  diagnostics.py  docs_pipeline.py  executor.py  feature_tools.py  knowledge.py  local_docs.py  macro_runner.py  model_ops.py  performance.py  server.py  skills.py  sw_connection.py  util.py  vba_lint.py
src/sw_mcp/resources/cosmon/code_execution/: global_code_library.rsp  global_code_template.cs.j2  template.cs.j2  user_code.rsp
src/sw_mcp/resources/cosmon/persistent_service/: compile_time_config.cs.j2
src/sw_mcp/resources/knowledge/: DESIGN_PLAYBOOK.md  LESSONS.md  rules.json
src/sw_mcp/resources/skills/analyze-simulation-results/: SKILL.md
src/sw_mcp/resources/skills/debug-simulation-failure/: SKILL.md
src/sw_mcp/resources/skills/docx/: SKILL.md
src/sw_mcp/vba/: helpers.vba
tests/: conftest.py  test_assembly.py  test_connection.py  test_cosmon_db.py  test_cosmon_resources.py  test_design_library.py  test_diagnostics.py  test_docs_pipeline.py  test_fast_workflow.py  test_local_docs.py  test_model_ops.py  test_runner.py  test_session_manager.py  test_skills.py  test_surface_sheetmetal.py  test_vba_lint.py
(+84 files in other folders)
