[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solidworks-mcp"
version = "0.1.0"
description = "MCP server that runs, tests and auto-fixes SolidWorks 2022 VBA macros via COM, with a JS-rendered API-docs pipeline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Saiq Kamran" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "pywin32>=306",
    "pillow>=10.0",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
solidworks-mcp = "sw_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sw_mcp = ["resources/*", "vba/*.vba"]
